force-app/main/default/objects/Projeto__c/Projeto__c.object-meta.xml
<CustomObject>
    <description>Objeto personalizado para Projeto.</description>
    <label>Projeto</label>
    <nameField>
        <label>Nome do Projeto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projetos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>