force-app/main/default/objects/Projeto__c/fields/ApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDate__c</fullName>
    <label>Data de aprovação</label>
    <type>Date</type>
</CustomField>