force-app/main/default/objects/Projeto__c/fields/BeneficiariasCadastradasProtocolo__c.field-meta.xml
<CustomField>
    <fullName>BeneficiariasCadastradasProtocolo__c</fullName>
    <description>Quantidade de beneficiárias cadastradas no protocolo.</description>
    <label>Beneficiárias Cadastradas no Protocolo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>