force-app/main/default/objects/Projeto__c/fields/CartaAprovacaoData__c.field-meta.xml
<CustomField>
    <fullName>CartaAprovacaoData__c</fullName>
    <description>Data de emissão da carta de aprovação.</description>
    <label>Data da Carta de Aprovação</label>
    <type>Date</type>
</CustomField>