force-app/main/default/objects/Projeto__c/fields/CartaAprovacaoDiasRestantes__c.field-meta.xml
<CustomField>
    <fullName>CartaAprovacaoDiasRestantes__c</fullName>
    <description>Dias até a validade da carta (valor negativo indica vencimento).</description>
    <label>Dias Restantes para a Carta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>