force-app/main/default/objects/Projeto__c/fields/CartaAprovacaoPrazoRegulatorio__c.field-meta.xml
<CustomField>
    <fullName>CartaAprovacaoPrazoRegulatorio__c</fullName>
    <formula>IF(
    ISBLANK(TEXT(CartaAprovacaoTipo__c)),
    NULL,
    CASE(
        TEXT(CartaAprovacaoTipo__c),
        &quot;Orcamento_Conexao_Microgeracao&quot;, 120,
        &quot;Orcamento_Conexao_Minigeracao&quot;, 365,
        &quot;Microgeracao&quot;, 120,
        &quot;Minigeracao&quot;, 365,
        &quot;Informacao_de_Acesso&quot;, 60,
        &quot;Disponibilidade_de_Energia&quot;, 90,
        &quot;Posto_ou_Subestacao&quot;, 730,
        NULL
    )
)</formula>
    <label>Prazo Regulatório</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>