force-app/main/default/objects/Projeto__c/fields/CartaAprovacaoSinalizacao__c.field-meta.xml
<CustomField>
    <fullName>CartaAprovacaoSinalizacao__c</fullName>
    <description>Indica se a carta está dentro do prazo, em alerta ou vencida.</description>
    <label>Sinalização da Carta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>