force-app/main/default/objects/Projeto__c/fields/CartaAprovacaoTipo__c.field-meta.xml
<CustomField>
    <fullName>CartaAprovacaoTipo__c</fullName>
    <description>Tipo de carta de aprovação emitida pela concessionária.</description>
    <label>Tipo da Carta de Aprovação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Informacao_de_Acesso</fullName>
                <label>Informação de Acesso</label>
            </value>
            <value>
                <fullName>Disponibilidade_de_Energia</fullName>
                <label>Disponibilidade de Energia</label>
            </value>
            <value>
                <fullName>Microgeracao</fullName>
                <label>Microgeração</label>
            </value>
            <value>
                <fullName>Minigeracao</fullName>
                <label>Minigeração</label>
            </value>
            <value>
                <fullName>Posto_ou_Subestacao</fullName>
                <label>Posto de Transformação / Subestação</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>