force-app/main/default/objects/Projeto__c/fields/CartaAprovacaoValidade__c.field-meta.xml
<CustomField>
    <fullName>CartaAprovacaoValidade__c</fullName>
    <description>Data limite calculada conforme o tipo da carta.</description>
    <label>Validade da Carta de Aprovação</label>
    <type>Date</type>
</CustomField>