force-app/main/default/objects/Projeto__c/fields/Concessionaria__c.field-meta.xml
<CustomField>
    <fullName>Concessionaria__c</fullName>
    <description>Campo para definição de Concessionária.</description>
    <label>Concessionária</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Energisa Acre - Distribuidora De Energia S.A - Eletroacre</fullName>
            </value>
            <value>
                <fullName>Equatorial Alagoas Distribuidora De Energia S.A. - Equatorial Al</fullName>
            </value>
            <value>
                <fullName>Amazonas Energia S.A - Ame</fullName>
            </value>
            <value>
                <fullName>Companhia De Eletricidade Do Amapá - Cea</fullName>
            </value>
            <value>
                <fullName>Companhia De Eletricidade Do Estado Da Bahia - Coelba</fullName>
            </value>
            <value>
                <fullName>Companhia Energética Do Ceará - Enel Ce</fullName>
            </value>
            <value>
                <fullName>Ceb Distribuição S.A. - Cebdis</fullName>
            </value>
            <value>
                <fullName>Energisa Borborema - Distribuidora De Energia S.A - Ebo</fullName>
            </value>
            <value>
                <fullName>Energisa Mato Grosso - Distribuidora De Energia S.A. - Emt</fullName>
            </value>
            <value>
                <fullName>Energisa Mato Grosso Do Sul - Distribuidora De Energia S.A. - Ems</fullName>
            </value>
            <value>
                <fullName>Energisa Paraíba - Distribuidora De Energia S.A - Epb</fullName>
            </value>
            <value>
                <fullName>Energisa Rondônia - Distribuidora De Energia S.A - Ceron</fullName>
            </value>
            <value>
                <fullName>Energisa Sul-Sudeste - Distribuidora De Energia S.A. - Ess</fullName>
            </value>
            <value>
                <fullName>Empresa Luz E Força Santa Maria S/A - Elfsm</fullName>
            </value>
            <value>
                <fullName>Espírito Santo Distribuição De Energia S.A. - Edp Es</fullName>
            </value>
            <value>
                <fullName>Celg Distribuição S.A. - Celg-D</fullName>
            </value>
            <value>
                <fullName>Companhia Hidroelétrica São Patrício - Chesp - Chesp</fullName>
            </value>
            <value>
                <fullName>Companhia Energética Do Maranhão - Cemar</fullName>
            </value>
            <value>
                <fullName>Cemig Distribuição S.A - Cemig-D</fullName>
            </value>
            <value>
                <fullName>Dme Distribuição S.A. - Dmed - Dmed</fullName>
            </value>
            <value>
                <fullName>Energisa Minas Gerais - Distribuidora De Energia S.A. - Emg</fullName>
            </value>
            <value>
                <fullName>Equatorial Pará Distribuidora De Energia S.A. - Equatorial Pa</fullName>
            </value>
            <value>
                <fullName>Companhia Energética De Pernambuco - Celpe</fullName>
            </value>
            <value>
                <fullName>Equatorial Piauí Distribuidora De Energia S.A - Equatorial Pi</fullName>
            </value>
            <value>
                <fullName>Companhia Campolarguense De Energia - Cocel</fullName>
            </value>
            <value>
                <fullName>Companhia Força E Luz Do Oeste - Cflo</fullName>
            </value>
            <value>
                <fullName>Copel Distribuição S.A. - Copel-Dis</fullName>
            </value>
            <value>
                <fullName>Força E Luz Coronel Vivida Ltda - Forcel</fullName>
            </value>
            <value>
                <fullName>Ampla Energia E Serviços S.A. - Enel Rj</fullName>
            </value>
            <value>
                <fullName>Energisa Nova Friburgo - Distribuidora De Energia S.A. - Enf</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>