force-app/main/default/objects/Projeto__c/fields/ConcessionariaEnergia__c.field-meta.xml
<CustomField>
    <fullName>ConcessionariaEnergia__c</fullName>
    <description>Campo para trazer o valor da oportunidade relacionada do campo lá já existente.</description>
    <formula>TEXT(Oportunidade__r.ConcessionariaEnergia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concessionária de Energia</label>
    <type>Text</type>
</CustomField>