force-app/main/default/objects/Projeto__c/fields/Consultor__c.field-meta.xml
<CustomField>
    <fullName>Consultor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para relacionar consultor ao projeto.</description>
    <label>Consultor</label>
    <referenceTo>Consultor__c</referenceTo>
    <relationshipLabel>Projetos</relationshipLabel>
    <relationshipName>Projetos</relationshipName>
    <type>Lookup</type>
</CustomField>