force-app/main/default/objects/Projeto__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <description>Campo para associar projetos a clientes.</description>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projetos</relationshipLabel>
    <relationshipName>Projetos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>