force-app/main/default/objects/Projeto__c/fields/ContagemPrazo__c.field-meta.xml
<CustomField>
    <fullName>ContagemPrazo__c</fullName>
    <description>Controle manual dos dias corridos do projeto.</description>
    <label>Contagem do Prazo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>