force-app/main/default/objects/Projeto__c/fields/ContagemPrazoPlanejamento__c.field-meta.xml
<CustomField>
    <fullName>ContagemPrazoPlanejamento__c</fullName>
    <description>Dias corridos registrados enquanto o projeto está em Planejamento.</description>
    <label>Contagem Prazo Planejamento de Projeto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>