force-app/main/default/objects/Projeto__c/fields/ContagemPrazoPlanejamentoFmt__c.field-meta.xml
<CustomField>
    <fullName>ContagemPrazoPlanejamentoFmt__c</fullName>
    <description>Tempo em Planejamento de projeto formatado (dias, horas, minutos, segundos).</description>
    <formula>IF(
    ISBLANK(ContagemPrazoPlanejamento__c),
    NULL,
    TEXT(FLOOR(ContagemPrazoPlanejamento__c)) &amp; &quot;d &quot; &amp;
    TEXT(FLOOR(MOD(ContagemPrazoPlanejamento__c * 24, 24))) &amp; &quot;h &quot; &amp;
    TEXT(FLOOR(MOD(ContagemPrazoPlanejamento__c * 24 * 60, 60))) &amp; &quot;m &quot; &amp;
    TEXT(FLOOR(MOD(ContagemPrazoPlanejamento__c * 24 * 60 * 60, 60))) &amp; &quot;s&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planejamento de projeto</label>
    <type>Text</type>
</CustomField>