force-app/main/default/objects/Projeto__c/fields/ContagemPrazoProjetoAnaliseFmt__c.field-meta.xml
<CustomField>
    <fullName>ContagemPrazoProjetoAnaliseFmt__c</fullName>
    <description>Tempo em Projeto em análise formatado (dias, horas, minutos, segundos).</description>
    <formula>IF(
    ISBLANK(ContagemPrazoProjetoAnalise__c),
    NULL,
    TEXT(FLOOR(ContagemPrazoProjetoAnalise__c)) &amp; &quot;d &quot; &
    TEXT(FLOOR(MOD(ContagemPrazoProjetoAnalise__c * 24, 24))) &amp; &quot;h &quot; &
    TEXT(FLOOR(MOD(ContagemPrazoProjetoAnalise__c * 24 * 60, 60))) &amp; &quot;m &quot; &
    TEXT(FLOOR(MOD(ContagemPrazoProjetoAnalise__c * 24 * 60 * 60, 60))) &amp; &quot;s&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projeto em análise</label>
    <type>Text</type>
</CustomField>