force-app/main/default/objects/Projeto__c/fields/ContagemPrazoProjetoElaboracaoFmt__c.field-meta.xml
<CustomField>
    <fullName>ContagemPrazoProjetoElaboracaoFmt__c</fullName>
    <description>Tempo em Projeto em elaboração formatado (dias, horas, minutos, segundos).</description>
    <formula>IF(
    ISBLANK(ContagemPrazoProjetoElaboracao__c),
    NULL,
    TEXT(FLOOR(ContagemPrazoProjetoElaboracao__c)) &amp; &quot;d &quot; &
    TEXT(FLOOR(MOD(ContagemPrazoProjetoElaboracao__c * 24, 24))) &amp; &quot;h &quot; &
    TEXT(FLOOR(MOD(ContagemPrazoProjetoElaboracao__c * 24 * 60, 60))) &amp; &quot;m &quot; &
    TEXT(FLOOR(MOD(ContagemPrazoProjetoElaboracao__c * 24 * 60 * 60, 60))) &amp; &quot;s&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projeto em elaboração</label>
    <type>Text</type>
</CustomField>