force-app/main/default/objects/Projeto__c/fields/CriarAtividadeViabilidadeTecnica__c.field-meta.xml
<CustomField>
    <fullName>CriarAtividadeViabilidadeTecnica__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcar para abrir uma atividade para a fila de Viabilidade Técnica com as pendências informadas.</description>
    <label>Criar atividade para viabilidade técnica</label>
    <type>Checkbox</type>
</CustomField>