force-app/main/default/objects/Projeto__c/fields/DataAprovacaoProjeto__c.field-meta.xml
<CustomField>
    <fullName>DataAprovacaoProjeto__c</fullName>
    <description>Data registrada a partir da atividade &quot;APROVAÇÃO DO PROJETO UFV&quot;.</description>
    <label>Data de Aprovação</label>
    <type>Date</type>
</CustomField>