force-app/main/default/objects/Projeto__c/fields/DataContagemPrazo__c.field-meta.xml
<CustomField>
    <fullName>DataContagemPrazo__c</fullName>
    <description>Campo para definir Data contagem do prazo.</description>
    <inlineHelpText>O prazo começa a contar ao atender três critérios: Assinatura do contrato; Pagamento do sistema; Liberação do telhado ou área de solo.</inlineHelpText>
    <label>Data contagem do prazo</label>
    <type>Date</type>
</CustomField>