force-app/main/default/objects/Projeto__c/fields/DataInicioContrato__c.field-meta.xml
<CustomField>
    <fullName>DataInicioContrato__c</fullName>
    <description>Campo para definir Data início.</description>
    <label>Data início do Contrato</label>
    <type>Date</type>
</CustomField>