force-app/main/default/objects/Projeto__c/fields/DataProtocoloProjeto__c.field-meta.xml
<CustomField>
    <fullName>DataProtocoloProjeto__c</fullName>
    <description>Data registrada a partir da atividade &quot;PROTOCOLAR PROJETO UFV&quot;.</description>
    <label>Data de Protocolo</label>
    <type>Date</type>
</CustomField>