force-app/main/default/objects/Projeto__c/fields/DataTermino__c.field-meta.xml
<CustomField>
    <fullName>DataTermino__c</fullName>
    <description>Formula para calcular a Data término.</description>
    <formula>DataContagemPrazo__c + PrazoContratoDias__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data término</label>
    <type>Date</type>
</CustomField>