force-app/main/default/objects/Projeto__c/fields/DateInspection__c.field-meta.xml
<CustomField>
    <fullName>DateInspection__c</fullName>
    <label>Data de aceite - Troca do medidor</label>
    <type>DateTime</type>
</CustomField>