force-app/main/default/objects/Projeto__c/fields/DiasAteAprovacao__c.field-meta.xml
<CustomField>
	<fullName>DiasAteAprovacao__c</fullName>
	<description
  >Tempo em dias corridos entre a Data de Protocolo e a Data de Aprovação do Projeto. Usado no indicador Tempo Médio de Aprovação segmentado por SCEE/Fast Track (Engenharia).</description>
	<formula
  >IF(ApprovalDate__c != NULL &amp;&amp; DataProtocoloProjeto__c != NULL, ApprovalDate__c - DataProtocoloProjeto__c, NULL)</formula>
	<formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
	<label>Dias Protocolo → Aprovação</label>
	<precision>18</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>