force-app/main/default/objects/Projeto__c/fields/DiasAteProtocolo__c.field-meta.xml
<CustomField>
	<fullName>DiasAteProtocolo__c</fullName>
	<description
  >Tempo em dias corridos entre a criação do Projeto e a Data de Protocolo. Usado no indicador Tempo Médio de Execução de Projetos (Engenharia).</description>
	<formula
  >IF(DataProtocoloProjeto__c != NULL, DataProtocoloProjeto__c - DATEVALUE(CreatedDate), NULL)</formula>
	<formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
	<label>Dias até Protocolo</label>
	<precision>18</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>