force-app/main/default/objects/Projeto__c/fields/DiasFaltantes__c.field-meta.xml
<CustomField>
    <fullName>DiasFaltantes__c</fullName>
    <description>Campo formula para definir Dias faltantes.</description>
    <formula>DataTermino__c  -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias faltantes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>