force-app/main/default/objects/Projeto__c/fields/DocumentacaoComercialPendencia__c.field-meta.xml
<CustomField>
    <fullName>DocumentacaoComercialPendencia__c</fullName>
    <description>Informações sobre documentação comercial faltante.</description>
    <label>Documentação faltante</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Proposta</fullName>
            </value>
            <value>
                <fullName>Proposta concorrente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>