force-app/main/default/objects/Projeto__c/fields/DocumentacaoCriarAtividadeContratos__c.field-meta.xml
<CustomField>
    <fullName>DocumentacaoCriarAtividadeContratos__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcar para abrir uma atividade para o time de Contratos com as pendências informadas.</description>
    <label>Criar atividade para contratos</label>
    <type>Checkbox</type>
</CustomField>