force-app/main/default/objects/Projeto__c/fields/FinishProjectDate__c.field-meta.xml
<CustomField>
    <fullName>FinishProjectDate__c</fullName>
    <label>Data de conclusão</label>
    <type>Date</type>
</CustomField>