force-app/main/default/objects/Projeto__c/fields/GestorObra__c.field-meta.xml
<CustomField>
    <fullName>GestorObra__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para definir Gestor da Obra.</description>
    <label>Gestor da Obra</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjetosGestor</relationshipName>
    <type>Lookup</type>
</CustomField>