force-app/main/default/objects/Projeto__c/fields/Instalacao__c.field-meta.xml
<CustomField>
    <fullName>Instalacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para associar projeto com instalação.</description>
    <label>Instalação</label>
    <referenceTo>Instalacao__c</referenceTo>
    <relationshipLabel>Projetos</relationshipLabel>
    <relationshipName>Projetos</relationshipName>
    <type>Lookup</type>
</CustomField>