force-app/main/default/objects/Projeto__c/fields/InstallDate__c.field-meta.xml
<CustomField>
    <fullName>InstallDate__c</fullName>
    <label>Data de Instalação</label>
    <type>DateTime</type>
</CustomField>