force-app/main/default/objects/Projeto__c/fields/InversaoFluxo__c.field-meta.xml
<CustomField>
    <fullName>InversaoFluxo__c</fullName>
    <description>Indica se há inversão de fluxo.</description>
    <defaultValue>false</defaultValue>
    <label>Inversão de Fluxo</label>
    <type>Checkbox</type>
</CustomField>