force-app/main/default/objects/Projeto__c/fields/Localizacao__c.field-meta.xml
<CustomField>
    <fullName>Localizacao__c</fullName>
    <description>Campo para definir Localização.</description>
    <label>Localização</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>