force-app/main/default/objects/Projeto__c/fields/MotivoSubStatus__c.field-meta.xml
<CustomField>
    <fullName>MotivoSubStatus__c</fullName>
    <label>Motivo Sub-Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>