force-app/main/default/objects/Projeto__c/fields/NecessarioObraNaRede__c.field-meta.xml
<CustomField>
    <fullName>NecessarioObraNaRede__c</fullName>
    <description>Indica se é necessária obra na rede.</description>
    <label>Necessário Obra na Rede</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>