force-app/main/default/objects/Projeto__c/fields/NecessarioPFC__c.field-meta.xml
<CustomField>
    <fullName>NecessarioPFC__c</fullName>
    <description>Indica se é necessário PFC.</description>
    <label>Necessário PFC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>