force-app/main/default/objects/Projeto__c/fields/NecessarioProtocolarProjetoCCSS__c.field-meta.xml
<CustomField>
    <fullName>NecessarioProtocolarProjetoCCSS__c</fullName>
    <formula>Oportunidade__r.NecessarioProtocolarProjetoCCSS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Necessário protoc. proj na concess.</label>
    <type>Checkbox</type>
</CustomField>