force-app/main/default/objects/Projeto__c/fields/NumeroProjeto__c.field-meta.xml
<CustomField>
    <fullName>NumeroProjeto__c</fullName>
    <description>Campo para numeração automática dos projetos criados,</description>
    <displayFormat>P-{00000}</displayFormat>
    <label>Número do projeto</label>
    <type>AutoNumber</type>
</CustomField>