force-app/main/default/objects/Projeto__c/fields/ObservacaoHomologacao__c.field-meta.xml
<CustomField>
    <fullName>ObservacaoHomologacao__c</fullName>
    <description>Observação para a etapa de homologação.</description>
    <label>Observação</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>