force-app/main/default/objects/Projeto__c/fields/Percentual_de_conclusao_da_Instalacao__c.field-meta.xml
<CustomField>
    <fullName>Percentual_de_conclusao_da_Instalacao__c</fullName>
    <label>Percentual de conclusão da Instalação</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>