force-app/main/default/objects/Projeto__c/fields/PotenciaPicoSistemakWp__c.field-meta.xml
<CustomField>
    <fullName>PotenciaPicoSistemakWp__c</fullName>
    <description>Campo para trazer o valor da oportunidade relacionada do campo lá já existente.</description>
    <formula>Oportunidade__r.PotenciaPicoSistema__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potência Pico do Sistema (kWp)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>