force-app/main/default/objects/Projeto__c/fields/PotenciaSistema__c.field-meta.xml
<CustomField>
    <fullName>PotenciaSistema__c</fullName>
    <description>Campo para definir Potência do sistema.</description>
    <label>Potência do sistema</label>
    <length>255</length>
    <type>Text</type>
</CustomField>