force-app/main/default/objects/Projeto__c/fields/PrazoContratoDias__c.field-meta.xml
<CustomField>
    <fullName>PrazoContratoDias__c</fullName>
    <description>Campo para definir Prazo de contrato (em dias).</description>
    <label>Prazo de contrato (em dias)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>