force-app/main/default/objects/Projeto__c/fields/PrazoObraNaRede__c.field-meta.xml
<CustomField>
    <fullName>PrazoObraNaRede__c</fullName>
    <description>Prazo para obra na rede.</description>
    <label>Prazo Obra na Rede</label>
    <length>100</length>
    <type>Text</type>
</CustomField>