force-app/main/default/objects/Projeto__c/fields/Projetista__c.field-meta.xml
<CustomField>
    <fullName>Projetista__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para definir Projetista.</description>
    <label>Projetista</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projetos</relationshipName>
    <type>Lookup</type>
</CustomField>