force-app/main/default/objects/Projeto__c/fields/SolicitationInspectionDate__c.field-meta.xml
<CustomField>
    <fullName>SolicitationInspectionDate__c</fullName>
    <label>Data da Solicitação Vistoria</label>
    <type>Date</type>
</CustomField>