force-app/main/default/objects/Projeto__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Campo para definir o status do projeto.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Não definido</fullName>
            </value>
            <value>
                <fullName>Planejamento</fullName>
            </value>
            <value>
                <fullName>Planejamento de projeto</fullName>
            </value>
            <value>
                <fullName>Elaboração de projeto</fullName>
            </value>
            <value>
                <fullName>Projeto protocolado</fullName>
            </value>
            <value>
                <fullName>Projetos em elaboração</fullName>
            </value>
            <value>
                <fullName>Projeto em análise</fullName>
            </value>
            <value>
                <fullName>Projeto aprovado</fullName>
            </value>
            <value>
                <fullName>Projeto cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>