force-app/main/default/objects/Projeto__c/fields/StatusAtualDesde__c.field-meta.xml
<CustomField>
    <fullName>StatusAtualDesde__c</fullName>
    <description>Data em que o projeto entrou no status atual, usada para calcular o tempo em cada fase.</description>
    <label>Status atual desde</label>
    <type>Date</type>
</CustomField>