force-app/main/default/objects/Projeto__c/fields/TipoObra__c.field-meta.xml
<CustomField>
    <fullName>TipoObra__c</fullName>
    <description>Campo para definir Tipo de Obra.</description>
    <label>Tipo de Obra</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UFVMicro</fullName>
                <label>UFV Micro</label>
            </value>
            <value>
                <fullName>UFV Mini Até 300</fullName>
            </value>
            <value>
                <fullName>UFV Mini acima de 300</fullName>
            </value>
            <value>
                <fullName>Bombeamento</fullName>
            </value>
            <value>
                <fullName>Estação de Recarga</fullName>
            </value>
            <value>
                <fullName>Posto de transformação</fullName>
            </value>
            <value>
                <fullName>Subestação</fullName>
            </value>
            <value>
                <fullName>Padrão de Entrada</fullName>
            </value>
            <value>
                <fullName>UVF Micro</fullName>
                <isActive>false</isActive>
                <label>UVF Micro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>