force-app/main/default/objects/Projeto__c/fields/TipoRegistroOportunidade__c.field-meta.xml
<CustomField>
    <fullName>TipoRegistroOportunidade__c</fullName>
    <description>Developer Name do tipo de registro da Oportunidade do projeto</description>
    <formula>Oportunidade__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Registro da Oportunidade</label>
    <type>Text</type>
</CustomField>