force-app/main/default/objects/Projeto__c/fields/TipoUsina__c.field-meta.xml
<CustomField>
    <fullName>TipoUsina__c</fullName>
    <description>Campo para definir Tipo de Usina.</description>
    <label>Tipo de Usina</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solo</fullName>
            </value>
            <value>
                <fullName>Telhado</fullName>
            </value>
            <value>
                <fullName>Tracker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>