force-app/main/default/objects/Projeto__c/fields/UFConcessionaria__c.field-meta.xml
<CustomField>
    <fullName>UFConcessionaria__c</fullName>
    <description>Unidade Federativa da Concessionária da Oportunidade</description>
    <label>UF da Concessionária</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UF</valueSetName>
    </valueSet>
</CustomField>