force-app/main/default/objects/Projeto__c/fields/UFConcessionAriaEnergia__c.field-meta.xml
<CustomField>
    <fullName>UFConcessionAriaEnergia__c</fullName>
    <description>Campo para trazer o valor da oportunidade relacionada do campo lá já existente.</description>
    <formula>TEXT( Oportunidade__r.UF_Concessionaria__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UF da Concessionária de Energia</label>
    <type>Text</type>
</CustomField>