force-app/main/default/objects/Projeto__c/fields/ValorPFC__c.field-meta.xml
<CustomField>
    <fullName>ValorPFC__c</fullName>
    <description>Valor PFC informado pela concessionária.</description>
    <label>Valor PFC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>