force-app/main/default/objects/Projeto__c/fields/Viabilidade__c.field-meta.xml
<CustomField>
    <fullName>Viabilidade__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Relaciona o projeto à análise de viabilidade correspondente.</description>
    <label>Viabilidade</label>
    <referenceTo>ViabilityStudy__c</referenceTo>
    <relationshipLabel>Projetos</relationshipLabel>
    <relationshipName>ProjetosViabilidade</relationshipName>
    <type>Lookup</type>
</CustomField>