force-app/main/default/objects/Projeto__c/fields/ViabilidadeTecnicaPendencia__c.field-meta.xml
<CustomField>
    <fullName>ViabilidadeTecnicaPendencia__c</fullName>
    <description>Detalhamento das pendências ou documentos faltantes para viabilidade técnica.</description>
    <label>Pendências da viabilidade técnica</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>