force-app/main/default/objects/Projeto__c/fields/ViabilityStudyOwner__c.field-meta.xml
<CustomField>
    <fullName>ViabilityStudyOwner__c</fullName>
    <formula>Oportunidade__r.ViabilityStudyOwner__r.FirstName + &apos; &apos; + Oportunidade__r.ViabilityStudyOwner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responsavel pela Viabilidade</label>
    <type>Text</type>
</CustomField>