force-app/main/default/objects/Projeto__c/recordTypes/Bombeamento.recordType-meta.xml
<RecordType>
    <fullName>Bombeamento</fullName>
    <active>true</active>
    <label>Bombeamento</label>
</RecordType>