force-app/main/default/objects/Projeto__c/recordTypes/BombeamentoOld.recordType-meta.xml
<RecordType>
    <fullName>BombeamentoOld</fullName>
    <active>false</active>
    <label>Bombeamento - Antigo</label>
</RecordType>