force-app/main/default/objects/Projeto__c/recordTypes/EstacaoRecarga.recordType-meta.xml
<RecordType>
    <fullName>EstacaoRecarga</fullName>
    <active>true</active>
    <label>Estação de Recarga</label>
    

</RecordType>