force-app/main/default/objects/Projeto__c/recordTypes/EstacaoRecargaOld.recordType-meta.xml
<RecordType>
    <fullName>EstacaoRecargaOld</fullName>
    <active>false</active>
    <label>Estação de Recarga - Antigo</label>
</RecordType>