force-app/main/default/objects/Projeto__c/recordTypes/Financiamento.recordType-meta.xml
<RecordType>
    <fullName>Financiamento</fullName>
    <active>false</active>
    <label>Financiamento</label>
</RecordType>