force-app/main/default/objects/Projeto__c/recordTypes/Old.recordType-meta.xml
<RecordType>
    <fullName>Old</fullName>
    <active>false</active>
    <label>Old</label>
</RecordType>