force-app/main/default/objects/Projeto__c/recordTypes/PadraoEntrada.recordType-meta.xml
<RecordType>
    <fullName>PadraoEntrada</fullName>
    <active>true</active>
    <label>Padrão de Entrada</label>
</RecordType>