force-app/main/default/objects/Projeto__c/recordTypes/PadraoEntradaOld.recordType-meta.xml
<RecordType>
    <fullName>PadraoEntradaOld</fullName>
    <active>false</active>
    <label>Padrão de Entrada - Antigo</label>
</RecordType>