force-app/main/default/objects/Projeto__c/recordTypes/PostoTransformacao.recordType-meta.xml
<RecordType>
    <fullName>PostoTransformacao</fullName>
    <active>false</active>
    <label>Posto de transformação</label>
</RecordType>