force-app/main/default/objects/Projeto__c/recordTypes/Subestacao.recordType-meta.xml
<RecordType>
    <fullName>Subestacao</fullName>
    <active>true</active>
    <label>Subestação</label>
</RecordType>